--- a/clock.css
+++ b/clock.css
@@ -1,108 +1,214 @@
-  body{
-    /* background: linear-gradient(black); */
-    background-color: black;
-} 
-.clock{
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    background: linear-gradient(red, black, white);
+}
+
+.clock {
     position: relative;
-    background:linear-gradient(orangered,white,green);
-    border: 4px solid black;
-    border-radius: 50%;
     width: 500px;
     height: 500px;
-    margin: auto;
-    margin-top: 100px;
+    overflow: hidden;
+    border: 10px solid black;
+    border-radius: 250px;
+    background-color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
 }
-.dot {
-    width: 14px;
-    height: 14px;
-    border-radius: 50%;
-    background: blue;
+
+.clock:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    position: absolute;
-    z-index: 10;
-    box-shadow: 0 2px 4px -1px black;
-  }
-.number .h1{
-    position: absolute;
-    color: green;
-    font-size: xx-large;
-    left: 220px;
 }
-.number .h2{
-    position: absolute;
-    color: blue;
-    font-size: xx-large;
-    left: 450px;
-    bottom: 230px;
-    
-}
-.number .h3{
-    position: absolute;
-    color: orangered;
-    font-size: xx-large;
-    left: 220px;
-    bottom: 10px;
-}
-.number .h4{
-    position: absolute;
-    color: blue;
-    font-size: xx-large;
-    left: 10px;
-    bottom: 230px;
-    
-}
-.hour-hand{
-    position: absolute;
-    z-index: 5;
-    width: 8px;
-    height: 200px;
-    background-color: black;
-    top: 79px;
-    transform-origin: 50% 60px;
-    left: 50%;
-    margin-left: -2px;
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
-    
-}
-.minute-hand{
 
+.clock:before {
+    content: '';
     position: absolute;
-    z-index: 5;
-    width: 11px;
-    height: 180px;
-    background-color: red;
-    top: 76px;
-    /* transform-origin: 50% 72px; */
+    top: 50%;
     left: 50%;
-    margin-left:-6px;
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px;
+    background-color: black;
+    border-radius: 50%;
 }
-.second-hand{
-    
-}
-.diallines {
+
+.num {
     position: absolute;
-    z-index: 2;
-    width: 2px;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 18px;
+
+
+}
+
+.num:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 5px;
     height: 15px;
-    background: black;
-    left: 50%;
-    margin-left: -1px;
-    transform-origin: 50% 150px;
-  }
-  .diallines:nth-of-type(5n) {
+    background-color: black;
+}
+
+.num1 {
+    transform: rotate(30deg);
+}
+
+.num1 div {
+    color: red;
+    transform: rotate(-30deg);
+}
+
+.num2 {
+    transform: rotate(60deg);
+}
+
+.num2 div {
+    color: darkgreen;
+    transform: rotate(-60deg);
+}
+
+.num3 {
+    transform: rotate(90deg);
+}
+
+.num3 div {
+    color: darkgoldenrod;
+    transform: rotate(-90deg);
+}
+
+.num4 {
+    transform: rotate(120deg);
+}
+
+.num4 div {
+    color: darkmagenta;
+    transform: rotate(-120deg);
+}
+
+.num5 {
+    transform: rotate(150deg);
+}
+
+.num5 div {
+    color: deeppink;
+    transform: rotate(-150deg);
+}
+
+.num6 {
+    transform: rotate(180deg);
+}
+
+.num6 div {
+    color: lawngreen;
+    transform: rotate(-180deg);
+}
+
+.num7 {
+    transform: rotate(210deg);
+}
+
+.num7 div {
+    color: lime;
+    transform: rotate(-210deg);
+}
+
+.num8 {
+    transform: rotate(240deg);
+}
+
+.num8 div {
+    color: yellow;
+    transform: rotate(-240deg);
+}
+
+.num9 {
+    transform: rotate(270deg);
+}
+
+.num9 div {
+    color: orangered;
+    transform: rotate(-270deg);
+}
+
+.num10 {
+    transform: rotate(300deg);
+}
+
+.num10 div {
+    color:aqua;
+    transform: rotate(-300deg);
+}
+
+.num11 {
+    transform: rotate(330deg);
+}
+
+.num11 div {
+    color: blue;
+    transform: rotate(-330deg);
+}
+
+/* .num12 {
+    transform: rotate(360deg);
+}
+
+.num12 div {
+    transform: rotate(-360deg);
+} */
+
+.hand {
     position: absolute;
-    z-index: 2;
-    width: 4px;
-    height: 25px;
-    background: #666;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.hand div {
+    position: absolute;
+    bottom: 50%;
     left: 50%;
-    margin-left: -1px;
-    transform-origin: 50% 150px;
-  }
+    transform: translateX(-50%);
+    background-color: black;
+}
+
+.second {
+    width: 2px;
+    height: 40%;
+
+}
+
+.minute {
+    height: 38%;
+    width: 4px;
+    border-radius: 2px;
+}
+
+.hour {
+    height: 28%;
+    width: 8px;
+    border-radius: 4px;
+}
